--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build ": "npx tsc -b"
+    "build ": "npx tsc -b",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
