--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc -b",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "npx tsc -b"
   },
   "keywords": [],
   "author": "",
